tests/fixtures/positive/licensing/CopyrightYearOutdated.kt
/*
 * Copyright (c) 2018 Krit Authors
 */
package licensing

fun currentFeature() = 42
