tests/fixtures/negative/licensing/CopyrightYearOutdated.kt
/*
 * Copyright (c) 2024 Krit Authors
 */
package licensing

fun currentFeature() = 42
